# autometal

./: .gitignore  CMakeLists.txt  README.md
src/autometal/: main.cc
src/autometal/operators/: KafkaOperator.cc  KafkaOperator.h  KubernetesOperator.cc  KubernetesOperator.h  Operator.cc  Operator.h  RunnableOperator.cc  RunnableOperator.h  ZookeeperOperator.cc  ZookeeperOperator.h
src/autometal/operators/kubernetes/: KubernetesOperator.cc  KubernetesOperator.h
